# lilium

./: CONTRIBUTING  Cargo.toml  LICENSE  LICENSE-MIT  README.md
automata/: Cargo.toml
automata/src/: fsm.rs  lib.rs  memory_machine.rs  stack_machine.rs
ccs/: Cargo.toml
ccs/src/: circuit.rs  constraint_system.rs  gates.rs  lib.rs  matrix.rs  structure.rs  witness.rs
commit/: Cargo.toml
commit/src/: committed_structure.rs  committed_structure2.rs  ipa.rs  lib.rs
commit/src/batching/: mod.rs  reduction.rs  structured.rs
commit/src/batching/multipoint/: evals.rs  mod.rs  prove.rs  reduction.rs  sumcheck.rs
commit/src/commit2/: mod.rs
commit/src/commit2/oracle/: mod.rs
commit/src/ipa/: mod.rs  poly_comm.rs  poly_comm2.rs  sponge.rs  vector_utils.rs
commit/src/ipa/tests/: mod.rs  poly_comm.rs  random_product.rs
commit/src/ipa2/: mod.rs  poly_comm.rs
data/benchmarks/multi_threaded/Commit and fold/CommitFolding/1048434/base/: estimates.json
data/benchmarks/multi_threaded/Commit and fold/CommitFolding/1048434/change/: estimates.json
data/benchmarks/multi_threaded/Commit and fold/CommitFolding/1048434/new/: sample.json  (+1 more)
data/benchmarks/multi_threaded/Commit and fold/CommitFolding/report/: index.html
data/benchmarks/multi_threaded/Commit and fold/report/: index.html
data/benchmarks/multi_threaded/Folding Time/Folding/report/: index.html
data/benchmarks/multi_threaded/Folding Time/report/: index.html
data/benchmarks/multi_threaded/Proving Time/Proving/report/: index.html
data/benchmarks/multi_threaded/Proving Time/report/: index.html
data/benchmarks/multi_threaded/report/: index.html
data/benchmarks/single_threaded/Proving Time/Proving/report/: index.html
data/benchmarks/single_threaded/Proving Time/report/: index.html
data/benchmarks/single_threaded/report/: index.html
hash-to-curve/: Cargo.toml
hash-to-curve/src/: lib.rs
hash-to-curve/src/svdw/: mod.rs  tests.rs
lilium/: Cargo.toml  README.md
lilium/benches/runtime/: main.rs
lilium/examples/: example1.rs  example2.rs  example3.rs
lilium/src/: circuit_key.rs  folding.rs  instance.rs  lib.rs  prove.rs  simple_cs.rs  test.rs
lilium/src/circuits/: mod.rs
lilium/src/instances/: matrix_eval.rs  mod.rs
lilium/src/instances/flcs/: folding.rs  key.rs  mod.rs  reduction.rs  reduction_proving.rs  sumcheck_reduction.rs
lilium/src/instances/lcs/: key.rs  mod.rs  proving.rs  reduction.rs  reduction_proving.rs  sumcheck_argument.rs  verifying.rs  zerocheck_reduction.rs
lilium/src/instances/linearized/: mod.rs  proving.rs  reduction_proving.rs  sumcheck_argument.rs
lilium/src/lilium2/: mod.rs  oracles.rs  relations.rs
lilium/src/lilium2/reductions/: mod.rs
lilium/src/lilium2/reductions/flcs/: mod.rs  sumcheck.rs
lilium/src/multivariate/: compute.rs  evaluate.rs  mod.rs  test.rs
lilium/src/proving/: matrix_eval.rs  matrix_eval2.rs  mod.rs
lilium/src/testing/: utils.rs
shout/: Cargo.toml
spark/: Cargo.toml
spark/src/: challenges.rs  commitment.rs  eq.rs  evals.rs  lib.rs  mvlookup.rs  spark.rs  structure.rs
spark/src/committed_spark/: mod.rs  prove.rs
spark/src/spark2/: evals.rs  flexible.rs  mod.rs  prove.rs  reduction.rs  sumcheck_argument.rs  trusted_commit.rs
spark/src/spark3/: committed.rs  flexible.rs  mod.rs  prove.rs  reduction.rs  sumcheck_argument.rs
spark/src/tests/: mod.rs  single_dimension_spark.rs  two_dimensions_spark.rs
sponge/: Cargo.toml
sponge/src/: constants_generation.rs  error.rs  grain.rs  lib.rs  permutation.rs  sponge.rs
sponge/src/poseidon2/: external_matrix.rs  internal_matrix.rs  mod.rs  permutation.rs  small_pow.rs
sumcheck/: Cargo.toml
sumcheck/derive/src/: evals.rs  evals_core.rs  lib.rs
sumcheck/src/: barycentric_eval.rs  degree.rs  eq.rs  eval_check.rs  eval_impls.rs  lib.rs  message.rs  polynomials.rs  sumcheck.rs  utils.rs  zerocheck.rs
sumcheck/src/folding/: mod.rs  prover.rs  reduction.rs  tests.rs  utils.rs  zerocheck.rs  zerofold.rs
sumcheck/src/sumcheck2/: message.rs  mod.rs  prove.rs  reduction.rs  relation.rs
sumcheck/src/sumcheck2/folding/: degree.rs  reduction.rs  zerofold.rs
sumcheck/src/sumcheck2/oracles/: composite.rs  core.rs  empty.rs  function.rs  mod.rs  partial.rs  small.rs
sumcheck/src/sumcheck2/zerocheck/: evals.rs  mod.rs  reduction.rs
sumcheck/src/symbolic/: compute.rs  evaluate.rs  expression.rs  id_map.rs  message_eval.rs  mod.rs  sumcheck_eval.rs  test.rs
sumcheck/src/tests/: mod.rs  mul_square.rs  sum_of_products.rs  zero_check.rs
transcript/: Cargo.toml
transcript/src/: instances.rs  lib.rs  messages.rs  params.rs  protocols.rs  transcript.rs  transcript_builder.rs  utils.rs
transcript/src/reduction2/: message.rs  mod.rs  proof.rs
(+256 files in other folders)
