[package]
name = "commit"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
rand = "0.8"
sumcheck = { path = "../sumcheck"} 
transcript = { path = "../transcript"} 
sponge = { path = "../sponge"} 
hash-to-curve = { path = "../hash-to-curve"} 
blake3 = "1.5"

[dev-dependencies]
ark-vesta = "0.4"