[package]
name = "lilium-commit"
version = "0.1.0"
edition = "2021"
description = "Commitment scheme traits and implementations for Lilium"
repository = "https://github.com/fabrizio-m/lilium"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
rand = "0.8"
sumcheck = { workspace = true } 
transcript = { workspace = true } 
sponge = { workspace = true } 
hash-to-curve = { workspace = true } 

[dev-dependencies]
ark-vesta = "0.4"
