[package]
name = "lilium"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4", default-features = false }
ccs = { path = "../ccs"}
sumcheck = { path = "../sumcheck"}
commit = { path = "../commit"}
spark = { path = "../spark"}

[dev-dependencies]
rand = "0.8"
ark-vesta = "0.4"