[package]
name = "lilium"
version = "0.1.0"
edition = "2021"
description = "The Lilium proof-system"
repository = "https://github.com/fabrizio-m/lilium"

[dependencies]
ark-ff = { version = "0.4", default-features = false }
ccs = { path = "../ccs"}
sumcheck = { path = "../sumcheck"}
commit = { path = "../commit"}
spark = { path = "../spark"}
sponge = { path = "../sponge"}
transcript = { path = "../transcript"}
hash-to-curve = { path = "../hash-to-curve"}
ark-vesta = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8"
ark-vesta = "0.4"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "runtime"
harness = false

[[example]]
name = "example1"
required-features = ["simple"]

[[example]]
name = "example2"
required-features = ["simple"]

[[example]]
name = "example3"
required-features = ["simple"]

[features]
simple = ["dep:ark-vesta"]
