[package]
name = "lilium"
version = "0.1.0"
edition = "2021"
description = "The Lilium proof-system"
repository = "https://github.com/fabrizio-m/lilium"

[dependencies]
ark-ff = { version = "0.4", default-features = false }
ccs = { workspace = true }
sumcheck = { workspace = true }
commit = { workspace = true }
spark = { workspace = true}
sponge = { workspace = true } 
transcript = { workspace = true }
hash-to-curve = { workspace = true } 
ark-vesta = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8"
ark-vesta = "0.4"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "runtime"
harness = false

[[example]]
name = "example1"
required-features = ["simple"]

[[example]]
name = "example2"
required-features = ["simple"]

[[example]]
name = "example3"
required-features = ["simple"]

[features]
simple = ["dep:ark-vesta"]
