[package]
name = "lilium-spark"
version = "0.1.0"
edition = "2021"
description = "Liliums' Spark implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-poly = "0.4"
sumcheck = { workspace = true } 
transcript = { workspace = true } 
sponge = { workspace = true } 
commit = { workspace = true } 

[dev-dependencies]
rand = "0.8"
ark-vesta = "0.4"
