[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-poly = "0.4"
transcript = { path = "../transcript"} 
sponge = { path = "../sponge"} 
automata = { path = "../automata"} 

[dev-dependencies]
rand = "0.8.5"
ark-vesta = "0.4"
